2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Specialize C-byte-range finangling for Guile 1.8+.

	* libpq.c [!GI_LEVEL_NOT_YET_1_8] (REND, NUL_AT_END_X): New macros.
	(FINANGLABLE_SCHEME_STRING_FROM_SYMBOL, _FINANGLE, UNFINANGLE):
	Bifurcate macros, based on ‘GI_LEVEL_NOT_YET_1_8’.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Use ‘FINANGLE’, ‘UNFINANGLE’ more.

	Omission from 2011-09-26, "Add abstractions
	to grok Scheme symbol/string as C byte range".

	* libpq.c (pg_mblen): Use ‘FINANGLE’, ‘UNFINANGLE’.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Construct ‘pg-guile-pg-loaded’ rv dynamically; reduce linking.

	* libpq.c (goodies): Delete var.
	(pg_guile_pg_loaded): Rewrite.
	(SIMPLE_SYMBOL, SYM): Delete macros.
	(PQPROTOCOLVERSION, PQRESULTERRORMESSAGE, PQPASS)
	(PQBACKENDPID, PQOIDVALUE, PQBINARYTUPLES, PQFMOD)
	(PQSETNONBLOCKING, PQISNONBLOCKING): Delete SIMPLE_SYMBOLs.
	(init_module): Don't init ‘goodies’.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Add abstraction: VALIDATE_KEYWORD

	* gi.h (VALIDATE_KEYWORD): New macro.
	* libpq.c (pg_result_error_field)
	(pg_set_error_verbosity): Use ‘VALIDATE_KEYWORD’.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Add abstraction: VALIDATE_EXACT_0_UP_TO_N_COPY

	* gi.h (VALIDATE_EXACT_0_UP_TO_N_COPY): New macro.
	* libpq.c (VALIDATE_FIELD_NUMBER_COPY):
	Use ‘VALIDATE_EXACT_0_UP_TO_N_COPY’.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Add abstraction: ASSERT_EXACT_NON_NEGATIVE_COPY

	* gi.h (ASSERT_EXACT_NON_NEGATIVE_COPY): New macro.
	* libpq.c (pg_lo_read): Use ‘ASSERT_EXACT_NON_NEGATIVE_COPY’.
	(pg_getvalue, pg_getlength, pg_getisnull): Likewise.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Add abstraction: ASSERT_EXACT

	* gi.h (ASSERT_EXACT): New macro.
	* libpq.c (pg_lo_seek, pg_mblen): Use ‘ASSERT_EXACT’.

2011-09-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Avoid ‘SCM_VALIDATE_INUM_COPY’.
